install 'flow-bin' - run initial npm install - add 'flow' script - update author

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kevin-scoot-swe-assessment",
+  "author": "Kevin Wang",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "flow": "flow",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -21,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "flow-bin": "^0.95.1"
+  }
 }
