--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "geolib": "^2.0.24",
     "google-map-react": "^1.1.2",
     "lodash": "^4.17.11",
