--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "bootstrap": "^4.3.1",
     "geolib": "^2.0.24",
     "google-map-react": "^1.1.2",
     "lodash": "^4.17.11",
