--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-REACT_APP_GOOGLE_API_KEY=___placeholder___
+REACT_APP_GOOGLE_API_KEY=
 
 # To have the google map component run in production-mode, in production,
-# replace `___placeholder___` with your google api key
-# rename this file `.env.example` to `.env` 
+
+# Copy and paste your google maps api key immediately after the equals sign (=)
+
+# rename this file from `.env.example` to `.env`
